--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                 margin-left: 300px;
                 }
         }
+
+        @media (max-width: 1000px) {
+            .text {
+               display: none;
+                }
+        }
         
         .dud {
             color: #757575;
