--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             font-weight: 100;
             font-size: 28px;
             color: #ffffff;
-            margin-left: 100px;
+            max-height: 100%;
             max-width: 1900px;
             line-height: 1;
             z-index: 10;
