--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
 						 	<p>Сделал свой первый сайт в 2012 году </p>   
 							<p>  Cертифицирован компанией Stepik по технологиям HTML/CSS, JavaScript.</p> 
 							<p>  Cертифицирован Udemy по технологиям React + Redux</p>
-							What's Up / Telegram: <strong><tel>89528822878</tel></strong>
+							What's Up / Telegram: <strong><a href="tel:+9528822878"><tel>89528822878</tel></a></strong>
 					</div> 
 
 				<!-- Social Icons -->
