--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 		<meta name="description" content="" />
 
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" href="assets/images/favicon.ico">
+		<link rel="icon" type="image/png" href="https://i.playground.ru/p/6M4bo6X2o2Sw7qb65R0shw.png">
 
 		<!-- Page Title -->
 		<title>Обо мне</title>
