--- a/gallery-4col.html
+++ b/gallery-4col.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="" />
 
 	<!-- Favicon -->
-
+	<link rel="icon" type="image/png" href="https://i.playground.ru/p/6M4bo6X2o2Sw7qb65R0shw.png">
 
 	<!-- Page Title -->
 	<title>Портфолио</title>
