fix for 4k monitors

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 		<!-- Header -->
 			<header class="transition header">
 				<div class="parallax">
-					<video autoplay muted loop >
+					<video autoplay muted loop class="video__parallax">
 						<source src="./assets/images/portfolio/video.mp4">
 					</video>
 					<div class="darker"></div>
