--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<div> </div>
 
 					</video>
-                    <video class="video-bg" muted loop width="1" height="1">
+                    <video class="video-bg" muted loop width="1"  height="1">
 						<source src="./assets/images/video/video1.mp4" type="video/mp4">
 						<div> </div>
 
@@ -225,7 +225,7 @@
         <footer id="footer" class="fixed ">
 
             <!-- BUTTON FOR PLAY MUSIC-->
-            <div onclick="play()" class="music">  Play rain music <img src="assets/images/musicOFF.png" alt=""> </div>
+            <div onclick="play()" class="music">   Включить звук дождя   <img src="assets/images/musicOFF.png" alt=""> </div>
 
         </footer>
         <!-- /Footer -->
