--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
     <meta charset="utf-8" />
     <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -68,7 +67,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://i.playground.ru/p/6M4bo6X2o2Sw7qb65R0shw.png">
+    <link rel="icon" type="webp" href="./assets/images/face.webp">
 
     <!-- Page Title -->
     <title>Главная</title>
@@ -97,6 +96,8 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+     
 </head>
 
 <body>
@@ -248,6 +249,7 @@
     <script type="text/javascript" src="assets/js/photoswipe-ui-default.min.js"></script>
 
     <!-- Main js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 
 
