--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 		<meta name="description" content="" />
 
 		<!-- Favicon -->
-		<link rel="icon" type="image/png" href="https://i.playground.ru/p/6M4bo6X2o2Sw7qb65R0shw.png">
+		<link rel="icon" type="webp" href="/assets/images/face.webp">
 
 		<!-- Page Title -->
 		<title>Обо мне</title>
@@ -47,9 +47,7 @@
 		
 		
 		<!-- Plugins -->
-		<link rel="stylesheet" href="assets/css/jquery.fullPage.css">
 		<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-		<link rel="stylesheet" href="assets/css/photoswipe.css">
 		<link rel="stylesheet" href="assets/css/default-skin/default-skin.css">
 		<link rel="stylesheet" href="assets/css/animate.css">
 
@@ -215,12 +213,7 @@
 			<script type="text/javascript" src="assets/js/jquery-1.11.3.min.js"></script>
 
 		<!-- Plugins -->
-			<script type="text/javascript" src="assets/js/jquery.fullPage.min.js"></script>
-			<script type="text/javascript" src="assets/js/imagesloaded.min.js"></script>
-			<script type="text/javascript" src="assets/js/masonry.​min.js"></script>
-			<script type="text/javascript" src="assets/js/website-smooth-scroll.js"></script>
-			<script type="text/javascript" src="assets/js/photoswipe.min.js"></script>
-			<script type="text/javascript" src="assets/js/photoswipe-ui-default.min.js"></script>
+			
 
 		<!-- Main js -->
 			<script type="text/javascript" src="assets/js/main.js"></script>
