--- a/gallery-4col.html
+++ b/gallery-4col.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="" />
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="https://i.playground.ru/p/6M4bo6X2o2Sw7qb65R0shw.png">
+	<link rel="icon" type="webp" href="/assets/images/face.webp">
 
 	<!-- Page Title -->
 	<title>Портфолио</title>
@@ -28,7 +28,6 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 
 	<!-- Plugins -->
-	<link rel="stylesheet" href="assets/css/jquery.fullPage.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/photoswipe.css">
 	<link rel="stylesheet" href="assets/css/default-skin/default-skin.css">
@@ -270,10 +269,8 @@
 	<script type="text/javascript" src="assets/js/jquery-1.11.3.min.js"></script>
 
 	<!-- Plugins -->
-	<script type="text/javascript" src="assets/js/jquery.fullPage.min.js"></script>
 	<script type="text/javascript" src="assets/js/imagesloaded.min.js"></script>
 	<script type="text/javascript" src="assets/js/masonry.​min.js"></script>
-	<script type="text/javascript" src="assets/js/website-smooth-scroll.js"></script>
 	<script type="text/javascript" src="assets/js/photoswipe.min.js"></script>
 	<script type="text/javascript" src="assets/js/photoswipe-ui-default.min.js"></script>
 
