--- a/gallery-4col.html
+++ b/gallery-4col.html
@@ -105,7 +105,7 @@
 			</div>
 			<div class="item-category">
 				<h1>Портфолио</h1>
-				<p>Люблю использовать красивые анимации и видео на фоне</p>
+				<div style="font-size: 18px">Более подробно с моим кодом и проектами можно ознакомиться на Гитхабе(ссылка в контактах)</div>
 				<div class="border">
 					<div></div>
 				</div>
