--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
                         </div>
                     </div>
                     <div class="align-left" id="hover1">
-                        <p>front-end developer</p>
+                        <p>front-end <br> Vue</p>
                         <h2 class="title">Kurman</h2>
-                        <h5>Найми меня и я сделаю всю грязную работу <br> вооружившись React/Vue JS</h5>
+                        <h5 style="padding-bottom:10px">HTML5/CSS3, JavaScript, Vue 2/3, Git</h5>
                         <a href="gallery-4col.html" class="btn" style="z-index: 3;">
                             <span>Портфолио</span>
                             <i class="fa fa-arrow-right"></i>
