--- a/about.html
+++ b/about.html
@@ -155,14 +155,14 @@
 							</a></strong></strong>
 					<div class="social-icons col-md12 col-sm-12 col-xs-12">
 
-						<a href="https://vk.com/failmail" class="btn facebook" style="color:" title="VK">
+						<a href="https://vk.com/failmail" class="btn facebook" title="VK">
 							<i class="fa fa-vk fa-2x"></i>
 						</a>
 						<a href="https://www.linkedin.com/in/%D0%B3%D1%80%D0%B8%D0%B3%D0%BE%D1%80%D0%B8%D0%B9-%D0%BA%D1%83%D1%80%D0%BC%D0%B0%D0%BD-ba7051113/"
-							class="btn youtube" style="color:" title="Linked">
+							class="btn youtube"  title="Linked">
 							<i class="fa fa-linkedin fa-2x"></i>
 						</a>
-						<a href="https://github.com/Greg-Kurman" class="btn px" style="color:" title="Github">
+						<a href="https://github.com/Greg-Kurman" class="btn px"  title="Github">
 							<i class="fa fa-github fa-2x"></i>
 						</a>
 
