fix music and webp

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 		rel='stylesheet' type='text/css'>
 
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 	<!-- Custom css file -->
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -64,7 +64,7 @@
 <body>
 
 	<!-- Container -->
-	<main class="container">
+	<main class="container" >
 
 		<!-- Mobile Menu -->
 		<div class="mobile-menu-overlay transition" style="background-color: black;">
@@ -93,7 +93,7 @@
 		<header class="transition header">
 			<div class="parallax">
 				<video autoplay muted loop class="video__parallax">
-					<source src="./assets/images/portfolio/video.mp4">
+					<source src="./assets/images/portfolio/video.webm">
 				</video>
 				<div class="darker"></div>
 			</div>
@@ -140,11 +140,12 @@
 			<!-- Row -->
 			<div class="row">
 				<div class="col-md6 col-sm-6 col-xs-12">
-					<img src="assets/images/about-me.jpg" alt="Image description" />
+					<img src="assets/images/about-me.webp" alt="Image description" />
 				</div>
 				<div class="col-md6 col-sm-6 col-xs-12 text_info" style="margin-bottom:80px;">
 					<h3>Григорий Курман</h3>
 
+					<p>	Создал первый коммерческий сайт в 2014 году и вывел его в топ 2 в поисковике Яндекс по запросу "тренажерный зал в Томске " </p>
 					<p> Cертифицирован компанией Stepik по технологиям HTML/CSS, JavaScript (10.07.2020)</p>
 					<p> Cертифицирован Udemy по технологиям React + Redux (4.10.2020)</p>
 					 
@@ -168,7 +169,7 @@
 
 
 
-						<a href="https://www.instagram.com/greg_kurman/?hl=ru" class="btn instagram" style="color:"
+						<a href="https://www.instagram.com/greg_kurman/?hl=ru" class="btn instagram" style="color:rgb(238, 49, 80)"
 							title="Instagram">
 							<i class="fa fa-instagram fa-2x"></i>
 						</a>
@@ -181,7 +182,7 @@
 				<!-- /Social Icons -->
 
 				<!-- Clients -->
-				<div style="display: flex; flex-direction: column;   align-items: center; width: 100%;  ">
+				<div style="display: flex; flex-direction: column;   align-items: center; width: 100%; padding-top: 30px; ">
 				<h3 style="text-align: center;"> Professional certification:</h3>
 
 
@@ -189,10 +190,10 @@
 						<img src="assets/images/s3.jpg" alt="clients">
 					</div>
 					<div style="width: 80%; border: 2px solid rgb(0, 0, 0);margin-bottom:50px;box-shadow: 20px 20px 40px #212121; ">
-						<img src="assets/images/s1.png" alt="clients">
+						<img src="assets/images/s1.webp" alt="clients">
 					</div>
 					<div style="width: 80%; border: 2px solid rgb(0, 0, 0);margin-bottom:50px;box-shadow: 20px 20px 30px #212121;">
-						<img src="assets/images/s2.png" alt="clients">
+						<img src="assets/images/s2.webp" alt="clients">
 					</div>
 
 
