--- a/gallery-4col.html
+++ b/gallery-4col.html
@@ -22,7 +22,7 @@
 		rel='stylesheet' type='text/css'>
 
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
 	<!-- Custom css file -->
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -44,7 +44,7 @@
 <body>
 
 	<!-- Container -->
-	<main class="container">
+	<main  class="container">
 
 		<!-- Mobile Menu -->
 		<div class="mobile-menu-overlay transition" style="background-color: black">
@@ -74,7 +74,7 @@
 
 			<div class="parallax">
 				<video autoplay muted loop class="video__parallax">
-					<source src="./assets/images/portfolio/video.mp4">
+					<source src="./assets/images/portfolio/video.webm">
 				</video>
 				<div class="darker"></div>
 			</div>
@@ -121,8 +121,8 @@
 
 				<!-- Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/16.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/16.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/16.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/16.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description">Сайт Портфолио для HR</figcaption>
 				</figure>
@@ -134,8 +134,8 @@
 
 				<!-- Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/1.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/1.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/1.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/1.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
@@ -145,15 +145,15 @@
 
 				<!-- /Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/7.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/7.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/7.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/7.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
 				<!-- Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/5.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/5.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/5.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/5.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
@@ -161,29 +161,29 @@
 
 				<!-- Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/12.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/12.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/12.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/12.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description">Тренажер слепой печати</figcaption>
 				</figure>
 				<!-- /Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/13.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/13.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/13.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/13.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
 				<!-- Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/14.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/14.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/14.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/14.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
 				<!-- /Grid Item-->
 				<figure class="grid-item col-md-3 col-sm-3 col-xs-12">
-					<a href="assets/images/portfolio/15.png" itemprop="contentUrl" data-size="1920x1080">
-						<img src="assets/images/portfolio/15.png" itemprop="thumb" alt="Image description" />
+					<a href="assets/images/portfolio/15.webp" itemprop="contentUrl" data-size="1920x1080">
+						<img src="assets/images/portfolio/15.webp" itemprop="thumb" alt="Image description" />
 					</a>
 					<figcaption itemprop="caption description"> </figcaption>
 				</figure>
